fixed uneven margin on text above share button

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ video{
 }
 
 #get-involved .right p:last-of-type {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 #get-involved .right .block {
